--- a/Realtors/Realtors.csproj
+++ b/Realtors/Realtors.csproj
@@ -79,6 +79,10 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Contents.json" />
@@ -86,10 +90,12 @@
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
     <InterfaceDefinition Include="Main.storyboard" />
+    <InterfaceDefinition Include="Main_swift.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -102,6 +108,21 @@
     <Compile Include="DetailViewController.designer.cs">
       <DependentUpon>DetailViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="PropertyCell.cs" />
+    <Compile Include="PropertyCell.designer.cs">
+      <DependentUpon>PropertyCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utilities\UIImageExtensions.cs" />
+    <Compile Include="Entities\Property.cs" />
+    <Compile Include="Service\PropertyService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Utilities\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Service\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\1.jpg" />
+  </ItemGroup>
 </Project>
